update: refactor UserDetails to UserParams

--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -86,7 +86,7 @@
                     <br/>
                     <div class="col-md-5">
                         <form th:action="@{/user/params/edit}" method="get">
-                            <button class="btn" name="Submit" type="Submit">Edit User Details
+                            <button class="btn" name="Submit" type="Submit">Edit User Parameters
                             </button>
                         </form>
                     </div>
