--- a/src/main/resources/templates/userParams/edit.html
+++ b/src/main/resources/templates/userParams/edit.html
@@ -90,7 +90,7 @@
             </div>
         </label>
         <br/><br/>
-        <button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Save User Details</button>
+        <button class="btn btn-lg btn-primary btn-block" name="Submit" type="Submit">Save User Parameters</button>
     </form>
 </div>
 </body>
