--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -24,92 +24,97 @@
             <div class="panel-heading">
                 <span th:utext="Welcome"></span> <span sec:authentication="name"></span>
             </div>
-            <div th:if="${userParamsDto == null}" class="panel-body">
-                <h3>What is your dream weight?</h3>
-                <br/>
-                <div class="row">
-                    <div class="col-md-9">
-                        <ul><b>Let us know you better so that we can:</b>
-                            <li>suggest you a diet plan that suits your needs</li>
-                            <li>show you when you will achieve your dream weight</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <form th:action="@{/user/params/add}" method="get">
-                            <button class="btn" name="Submit" type="Submit">Add User Details
-                            </button>
-                        </form>
+            <div sec:authorize="hasRole('USER')">
+                <div th:if="${userParamsDto == null}" class="panel-body">
+                    <b>What is your dream weight?</b>
+                    <br/>
+                    <div class="row">
+                        <div class="col-md-9">
+                            <b>Let us know you better so that we can:</b>
+                            <ul>
+                                <li>suggest you a diet plan that suits your needs</li>
+                                <li>show you when you will achieve your dream weight</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3">
+                            <form th:action="@{/user/params/add}" method="get">
+                                <button class="btn" name="Submit" type="Submit">Add User Details
+                                </button>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div th:if="${userParamsDto != null}" class="panel-body">
-                <div>Suggested daily intake of calories: <b th:text="${userParamsDto.dailyCalories}"></b> kcal</div>
-                <br/>
-                <div class="row">
-                    <div class="col-md-5">
-                        <div>Your recent weight: <b th:text="${latestWeightDto.weight}"></b> kg</div>
-                        <div>Your dream weight: <b th:text="${userParamsDto.dreamWeight}"></b> kg</div>
-                        <div>Your activity level: <b th:text="${userParamsDto.activityLevel.name}"></b></div>
-                    </div>
-                    <div class="col-md-5">
-                        <form th:action="@{/user/weight/history}" method="get">
-                            <button class="btn" name="Submit" type="Submit">Show Weight History
-                            </button>
-                        </form>
-                    </div>
-                </div>
-                <br/>
-                <div><b th:text="${successDate}"></b></div>
-                <br/>
-                <div class="row">
-                    <div class="col-md-5">
-                        <ul>Your preferences:
-                            <li>cuisine type: <span th:if="${userParamsDto.cuisineType == null}">none</span>
-                                <b th:if="${userParamsDto.cuisineType != null}"
-                                   th:text="${userParamsDto.cuisineType.name}"/>
-                            </li>
-                            <li>allergies and health issues:
-                                <span th:if="${userParamsDto.healths.isEmpty()}">none</span>
-                                <b th:each="health : ${userParamsDto.healths}">
-                                    <div th:text="${health.name}"></div>
-                                </b>
-                            </li>
-                            <li>diets:
-                                <span th:if="${userParamsDto.diets.isEmpty()}">none</span>
-                                <b th:each="diet : ${userParamsDto.diets}">
-                                    <div th:text="${diet.name}"></div>
-                                </b>
-                            </li>
-                        </ul>
+                <div th:if="${userParamsDto != null}" class="panel-body">
+                    <div>Suggested daily intake of calories: <b th:text="${userParamsDto.dailyCalories}"></b> kcal</div>
+                    <br/>
+                    <div class="row">
+                        <div class="col-md-5">
+                            <div>Your recent weight: <b th:text="${latestWeightDto.weight}"></b> kg</div>
+                            <div>Your dream weight: <b th:text="${userParamsDto.dreamWeight}"></b> kg</div>
+                            <div>Your activity level: <b th:text="${userParamsDto.activityLevel.name}"></b></div>
+                        </div>
+                        <div class="col-md-5">
+                            <form th:action="@{/user/weight/history}" method="get">
+                                <button class="btn" name="Submit" type="Submit">Show Weight History
+                                </button>
+                            </form>
+                        </div>
                     </div>
                     <br/>
-                    <div class="col-md-5">
-                        <form th:action="@{/user/params/edit}" method="get">
-                            <button class="btn" name="Submit" type="Submit">Edit User Parameters
-                            </button>
-                        </form>
+                    <div><b th:text="${successDate}"></b></div>
+                    <br/>
+                    <div class="row">
+                        <div class="col-md-5">
+                            <ul>Your preferences:
+                                <li>cuisine type: <span th:if="${userParamsDto.cuisineType == null}">none</span>
+                                    <b th:if="${userParamsDto.cuisineType != null}"
+                                       th:text="${userParamsDto.cuisineType.name}"/>
+                                </li>
+                                <li>allergies and health issues:
+                                    <span th:if="${userParamsDto.healths.isEmpty()}">none</span>
+                                    <b th:each="health : ${userParamsDto.healths}">
+                                        <div th:text="${health.name}"></div>
+                                    </b>
+                                </li>
+                                <li>diets:
+                                    <span th:if="${userParamsDto.diets.isEmpty()}">none</span>
+                                    <b th:each="diet : ${userParamsDto.diets}">
+                                        <div th:text="${diet.name}"></div>
+                                    </b>
+                                </li>
+                            </ul>
+                        </div>
+                        <br/>
+                        <div class="col-md-5">
+                            <form th:action="@{/user/params/edit}" method="get">
+                                <button class="btn" name="Submit" type="Submit">Edit User Parameters
+                                </button>
+                            </form>
+                        </div>
                     </div>
+                    <br/>
+
+                    <form th:action="@{/user/plan/new}" method="get">
+                        <button class="btn btn-primary" name="Submit" type="Submit">New Diet Plan
+                        </button>
+                    </form>
+                    <form th:if="${isPlanComplete == true}" th:action="@{/user/plan/load}" method="get">
+                        <button class="btn" name="Submit" type="Submit">Your Last Diet Plan
+                        </button>
+                    </form>
+
+                    <br>
+                    <form th:action="@{/user/call}" method="get">
+                        Need professional advice? Start video call with our Dietitian
+                        <button id="register" class="btn" name="Submit" type="Submit">Go To Video Call
+                        </button>
+                    </form>
                 </div>
-                <br/>
-                <div class="row">
-                    <div class="col-md-5">
-                        <form th:action="@{/user/plan/new}" method="get">
-                            <button class="btn btn-primary" name="Submit" type="Submit">New Diet Plan
-                            </button>
-                        </form>
-                    </div>
-                    <div class="col-md-5">
-                        <form th:if="${isPlanComplete == true}" th:action="@{/user/plan/load}" method="get">
-                            <button class="btn" name="Submit" type="Submit">Your Last Diet Plan
-                            </button>
-                        </form>
-                    </div>
-                </div>
-                <br>
-                <form th:action="@{/user/call}" method="get">
-                    Need professional advice? Start video call with our Dietitian
-                    <button id="register" class="btn" name="Submit" type="Submit">Go To Video Call
+            </div>
+            <div sec:authorize="hasRole('ADMIN')">
+                <form th:action="@{/admin/call}" method="get">
+                    <button class="btn" name="Submit" type="Submit">Go To Video Call
                     </button>
                 </form>
             </div>
