--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -30,9 +30,9 @@
                     <br/>
                     <div class="row">
                         <div class="col-md-9">
-                            <b>Let us know you better so that we can:</b>
+                            Let us know you better so that we can:
                             <ul>
-                                <li>suggest you a diet plan that suits your needs</li>
+                                <li>suggest you a weekly diet plan based upon your needs</li>
                                 <li>show you when you will achieve your dream weight</li>
                             </ul>
                         </div>
@@ -99,14 +99,14 @@
                         <button class="btn btn-primary" name="Submit" type="Submit">New Diet Plan
                         </button>
                     </form>
-                    <form th:if="${isPlanComplete == true}" th:action="@{/user/plan/load}" method="get">
+                    <form th:if="${isPlanComplete == true}" th:action="@{/templates/user/plan/load}" method="get">
                         <button class="btn" name="Submit" type="Submit">Your Last Diet Plan
                         </button>
                     </form>
 
                     <br>
                     <form th:action="@{/user/call}" method="get">
-                        Need professional advice? Start video call with our Dietitian
+                        Need professional advice? Start video call with our dietitian
                         <button id="register" class="btn" name="Submit" type="Submit">Go To Video Call
                         </button>
                     </form>
@@ -114,7 +114,7 @@
             </div>
             <div sec:authorize="hasRole('ADMIN')">
                 <form th:action="@{/admin/call}" method="get">
-                    <button class="btn" name="Submit" type="Submit">Go To Video Call
+                    <button class="btn" name="Submit" type="Submit">Video Call Panel
                     </button>
                 </form>
             </div>
