--- a/src/main/resources/templates/videoCall/adminCall.html
+++ b/src/main/resources/templates/videoCall/adminCall.html
@@ -28,11 +28,8 @@
 </head>
 
 <body>
-<form th:if="${!userName.equals('Dietitian')}" th:action="@{/user/home}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>
-</form>
-<form th:if="${userName.equals('Dietitian')}" th:action="@{/logout}" method="get">
-    <button class="btn btn-md btn-danger btn-block" name="registration" type="Submit">Logout
+<form th:action="@{/logout}" method="get">
+    <button class="btn btn-md btn-danger btn-block" type="Submit">Logout
     </button>
 </form>
 
@@ -41,8 +38,7 @@
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <span sec:authentication="name"></span>
-                <span th:if="${userName.equals('Dietitian')}">, now you can accept calls from Users!</span>
-                <span th:if="${!userName.equals('Dietitian')}">, now you can make a call to our dietician!</span>
+                <span>, now you can accept calls from Users!</span>
             </div>
             <div class="panel-body">
                 <div class="col-md-4">
