--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="col-md-3">
                             <form th:action="@{/user/params/add}" method="get">
-                                <button class="btn" name="Submit" type="Submit">Add User Details
+                                <button class="btn" name="Submit" type="Submit">Add User Parameters
                                 </button>
                             </form>
                         </div>
@@ -103,7 +103,7 @@
                             </form>
                         </div>
                         <div class="col-md-2">
-                            <form th:if="${isPlanComplete == true}" th:action="@{/templates/user/plan/load}"
+                            <form th:if="${isPlanComplete == true}" th:action="@{/user/plan/load}"
                                   method="get">
                                 <button class="btn" name="Submit" type="Submit">Your Last Diet Plan
                                 </button>
