--- a/src/main/resources/templates/plan/show.html
+++ b/src/main/resources/templates/plan/show.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<form th:action="@{user/home}" method="get">
+<form th:action="@{/user/home}" method="get">
     <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>
 </form>
 
