Update small remarks

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -25,7 +25,7 @@
         call</b>! Yes, this is SO SIMPLE!</p>
     <br/>
 
-    <form th:action="@{/register}" method="GET" class="form">
+    <form th:action="@{/registration}" method="GET" class="form">
         <button class="btn btn-lg btn-warning btn-block" type="Submit" th:align="center"
                 th:text="Register"></button>
     </form>
