Update small remarks

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -21,7 +21,7 @@
     <p th:align="center">Do you have <b th:class="green">allergies</b> or special <b th:class="green">dietary
         recommendations</b>? Don't worry! We've got it covered!</p>
     <p th:align="center">Wanna <b th:class="green">track your weight results</b>? No problem!</p>
-    <p th:align="center">Need professional advice? <b th:class="green">meet our dietitians immediately on a video
+    <p th:align="center">Need professional advice? <b th:class="green">Meet our dietitians immediately on a video
         call</b>! Yes, this is SO SIMPLE!</p>
     <br/>
 
