--- a/src/main/resources/templates/videoCall/adminCall.html
+++ b/src/main/resources/templates/videoCall/adminCall.html
@@ -28,9 +28,8 @@
 </head>
 
 <body>
-<form th:action="@{/logout}" method="get">
-    <button class="btn btn-md btn-danger btn-block" type="Submit">Logout
-    </button>
+<form th:action="@{/user/home}" method="get">
+    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Home Page</button>
 </form>
 
 <div class="container">
