--- a/src/main/resources/templates/userParams/add.html
+++ b/src/main/resources/templates/userParams/add.html
@@ -19,9 +19,9 @@
     <form th:action="@{/user/params/add}" method="post" class="form-signin" th:object="${userParamsDto}">
         <h3 class="form-signin-heading">Add User Details</h3>
         <label>Gender:
-            <div th:each="gender: ${gendersDto}">
-                <input type="radio" th:field="*{gender}" th:value="${gender.id}">
-                <label th:text="${gender.name.name}"></label>
+            <div th:each="gender: ${T(pl.coderslab.allyouneedisdietplan.enums.Gender).values()}">
+                <input type="radio" th:field="*{gender}" th:value="${gender}">
+                <label th:text="${gender}"></label>
             </div>
             <label th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}"
                    class="validation-message"></label>
